refactor: MusicManager->iterator in playTopHits